Fix layout on mobile of Consultation button

--- a/src/pages/main/css/consultation.css
+++ b/src/pages/main/css/consultation.css
@@ -1,7 +1,8 @@
 .consultation-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    gap: 10px;
+    justify-content: space-between;
     align-items: center;
     font-size: 1.2em;
     /* border: 1px solid red; */
@@ -14,4 +15,9 @@
 
 .consultation-highlight {
     color: #c4f1ff;
+}
+
+.consultation-button {
+    margin-left: 64px;
+    width: 262px;
 }
