--- a/src/pages/main/css/hero.css
+++ b/src/pages/main/css/hero.css
@@ -13,7 +13,6 @@
 }
 .cmc-logo {
     width: 160px;
-    margin-top: 40px;
 }
 
 .hero-header-text {
@@ -26,7 +25,8 @@
 .hero-logos {
     display: flex;
     justify-content: space-between;
-    clear: both;
+    align-items: center;
+    padding-top: 40px;
 
     @media (width <= 1000px) {
         float: none !important;
@@ -37,7 +37,7 @@
     height: clamp(40px, 4.2vh, 80px);
     margin-right: 10px;
     margin-left: 10px;
-    margin-top: 40px;
+
     opacity: 1;
     /* 
     @media (width <= 500) {
